    * handle REM style comments (Closes: #748611)
  * uscan: use defined-or (//) instead of "||" to avoid loosing
    '0' version field (Closes: #787767)

  [ Piotr Ożarowski ]
  * uscan: Use pypi.debian.net redirector instead of
    pypi.debian.org/packages/source URLs.  (Closes: #785746)

  [ Hideki Yamane ]
  * Add bash completion for dcut.  (Closes: #787321)

 -- Cyril Brulebois <kibi@debian.org>  Tue, 28 Apr 2015 16:58:36 +0200

devscripts (2.15.4) unstable; urgency=medium

  [ Dominique Dumont ]
  * licensecheck:
    + Handle license like GPL version 2 or 3 (which is not GPL-2+)
    + Ignore .pc directories
    + print copyrights in a non random-order

  [ Daniel Kahn Gillmor ]
  * uscan: explicitly dearmor, rather than --import upstream signing key
    (Closes: #768345)

  [ James McCoy ]
  * debsnap: When specified version or architectures aren't available, warn
    and exit with error code 2.  (Closes: #774276)
  * rmadison:
    + Display the usage to the specified fd instead of ignoring it.
    + Display the known URL aliases in the usage.
    + Display all the URLs in --help when $default_url is a comma-separated
      list.
    + Remove 404ing myon and debug URLs
    + Use https://api.ftp-master.debian.org/madison for debian and new URLs.
      This also fixes support for the -b option.  (Closes: #775084)
    + Strip arch-qualifiers from package names.  (Closes: #780167)
  * mk-origtargz: Avoid adding the same file to the "to be deleted" list
    multiple times.  This may also cause patterns to be declared as unused if
    a file is matched by multiple patterns.  (Closes: #776318)
  * who-uploads:
    + Fix extraction of uploader's key id.
    * Create a temporary GNUPGHOME to avoid “gpg --list-key” erroring when no
      ~/.gnupg exists.  (Closes: #776209)
  * bts: Cancel the mail if the spawned editor exits with a non-zero exit
    code.  This is an alternative way to cancel a command, rather than saving
    an empty message.  (Closes: #778648)