@@ -60,6 +60,9 @@ devscripts (2.15.5) UNRELEASED; urgency=medium
   [ Hideki Yamane ]
   * Add bash completion for dcut.  (Closes: #787321)
 
+  [ Craig Small ]
+  * debdiff: Honor DEBRELEASE_DEBS_DIR or --debs-dir.  (Closes: #785421)
+
  -- Cyril Brulebois <kibi@debian.org>  Tue, 28 Apr 2015 16:58:36 +0200
 
 devscripts (2.15.4) unstable; urgency=medium
